<resources>
    <string name="app_name">TaobaoClient</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">我的淘宝</string>
    <string name="login_tv_email">邮箱登录:</string>
    <string name="login_tv_password">密 码:</string>
    <string name="login_et_password_hint">请输入密码</string>
    <string name="login_et_email_hint">请输入您的邮箱</string>
</resources>
