<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--标题-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_title"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/login_titlesize"/>

    </LinearLayout>
    <!--用户名,密码输入-->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/login_tv_email"
                android:id="@+id/login_tv_email"
                android:textSize="@dimen/login_textsize"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="66dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/login_tv_password"
                android:textSize="@dimen/login_textsize"
                android:id="@+id/login_tv_password"
                android:layout_marginBottom="89dp"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/login_tv_email"
                android:layout_alignStart="@+id/login_tv_email"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/login_et_password"
                android:hint="@string/login_et_password_hint"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_alignTop="@+id/login_tv_password"
                android:layout_toRightOf="@+id/login_tv_email"
                android:layout_toEndOf="@+id/login_tv_email"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/login_et_email"
                android:hint="@string/login_et_email_hint"
                android:layout_alignTop="@+id/login_tv_email"
                android:layout_alignLeft="@+id/login_et_password"
                android:layout_alignStart="@+id/login_et_password"/>

    </RelativeLayout>
    <!--按键区-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
        <Button
                android:id="@+id/login_btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登录"/>
        <Button
                android:id="@+id/login_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="退出"/>

    </LinearLayout>

</LinearLayout>